--- a/Codigo/Quem-Somos.html
+++ b/Codigo/Quem-Somos.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="barra-de-navegacao">
-      <section class="logo">
+      <section class="logo-cabecalho">
         <img src="./assets/Logo-1-e1675283606825-300x112.png" style="height: 90px; width: 270px;" alt="" class="logo-principal">
       </section>
       <section class="nav-bar">
@@ -26,25 +26,59 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="Orcamentos.html">Orçamentos</a></li>
             <li><a href="Servicos.html">Serviços</a></li>
-            <li><a class="quem-somos" href="#">Quem somos</a></li>
-            <li><a class="contate-nos" href="Contate.html">Contato</a></li>
+            <li><a href="#">Quem somos</a></li>
+            <li><a href="Contate.html">Contato</a></li>
           </ul>
         </nav>
       </section>
       <section class="links">
-        <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
-        <span class="cliente">Área do Cliente</span>
+        <a href="#" class="usuario">
+          <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
+          <span class="cliente">Área do Cliente</span>
+        </a>
+        
       </section>
     </div>
   </header>
 
   <main>
+    <span class="titulo-principal">Sobre nós</span>
+    <div class="historia">
+      <p class="historia-texto">
+        A Surgical Tecnologia, fundada por Ricardo Bajur há 20 anos, é uma empresa líder em equipamentos médico-hospitalares. Com sede na rua Manhumirim 447, Padre Eustáquio, conta com uma equipe de 20 colaboradores e uma clientela em constante crescimento. Oferece serviços de calibração, manutenção preventiva e corretiva, além da locação de equipamentos. 
+Reconhecida pela excelência em calibração de analisadores, possui certificação ISO 9001 e segue rigorosas normas da área.
+A gestão é realizada por Ricardo na área técnica e por sua esposa Sandra Bajur na administração de pessoas. 
+A empresa tem especialistas em qualidade, TI e engenharia clínica. 
+Adotamos uma abordagem holística, promovendo a interligação entre as equipes para aumentar a empatia e a produtividade.
+O marketing é realizado por uma especialista usando redes sociais e site. 
+A Surgical Tecnologia está sempre pronta para atender com agilidade, confiança e qualidade, entregando soluções confiáveis há 20 anos.
 
+      </p>
+    </div>
+    <div class="valores">
+      <div class="valores_parte1">
+        <span class="missao">Missão</span>
+        <p></p>
+      </div>
+      <div class="valores_parte2">
+        <span class="valores">Valores</span>
+        <ul></ul>
+      </div>
+      <div class="valores_parte3">
+        <span class="visao">Visão</span>
+        <p></p>
+      </div>
+
+    </div>
+    <div class="certificacoes">
+
+    </div>
+    <div class="equipe"></div>
   </main>
 
   <footer>
     <div class="conteudo">
-      <div class="logo">
+      <div class="logo-footer">
         <img src="./assets/Logo Colorida.png"  style="width: 321px;height: 140px;" id="logo">
         <div id="footer-socialmedia">
           <a href="https://www.instagram.com/surgicaltecnologia/" target="_blank" class="footer-link" id="instagram">
