--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="barra-de-navegacao">
-      <section class="logo">
+      <section class="logo-cabecalho">
         <img src="./assets/Logo-1-e1675283606825-300x112.png" style="height: 90px; width: 270px;" alt="" class="logo-principal">
       </section>
       <section class="nav-bar">
@@ -32,8 +32,11 @@
         </nav>
       </section>
       <section class="links">
-        <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
-        <span class="cliente">Área do Cliente</span>
+        <a href="#" class="usuario">
+          <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
+          <span class="cliente">Área do Cliente</span>
+        </a>
+        
       </section>
     </div>
   </header>
@@ -89,14 +92,14 @@
               <figcaption>Manutenção<br>Preventiva</figcaption>
           </figure>
         </div>
-        <a href="">Ver mais</a>
+        <a href="" class="servicos_botao">Conheça todos nossos serviços </a>
       </section>
     </div>
   </main>
 
   <footer>
     <div class="conteudo">
-      <div class="logo">
+      <div class="logo-footer">
         <img src="./assets/Logo Colorida.png"  style="width: 321px;height: 140px;" id="logo">
         <div id="footer-socialmedia">
           <a href="https://www.instagram.com/surgicaltecnologia/" target="_blank" class="footer-link" id="instagram">
