--- a/Codigo/about.html
+++ b/Codigo/about.html
@@ -16,7 +16,7 @@
   <title>Surgical Tec – Calibração em equipamentos eletromédicos</title>
 </head>
 
-<body>
+<body onload=Carrega()>
   <header>
     <div class="barra-de-navegacao">
       <section class="logo-cabecalho">
@@ -47,9 +47,8 @@
     <div class="about_sec">
       <h3 class="titulo-principal">Sobre nós</h3>
       <section class="historia">
-        <p class="historia-texto">A Surgical Tecnologia, fundada por Ricardo Bajur há 20 anos, é uma empresa líder em
-          equipamentos médico-hospitalares. Com sede na rua Manhumirim 447, Padre Eustáquio, conta com uma equipe de 20
-          colaboradores e uma clientela em constante crescimento. Oferece serviços de calibração, manutenção preventiva e
+        <p class="historia-texto">
+          A Surgical Tecnologia é uma empresa líder em equipamentos médico-hospitalares com uma clientela em constante crescimento. Oferecemos serviços de calibração, manutenção preventiva e
           corretiva, além da locação de equipamentos.
         </p>
         <p>
@@ -67,15 +66,22 @@
       <section class="valores">
         <div class="valores_parte1">
           <span class="missao">Missão</span>
-          <p></p>
+          <p>Prestar serviços de calibração em instrumentos de medição e analisadores eletromédicos.</p>
         </div>
         <div class="valores_parte2">
-          <span class="valores">Valores</span>
-          <ul></ul>
+          <span class="valores_empresa">Valores</span>
+          <ul>
+            <li>Qualidade</li>
+            <li>Responsabilidade</li>
+            <li>Confiabilidade</li>
+            <li>Trabalho em equipe</li>
+            <li>Ética e Respeito</li>
+            <li>Comprometimento</li>
+          </ul>
         </div>
         <div class="valores_parte3">
           <span class="visao">Visão</span>
-          <p></p>
+          <p>Reconhecimento no segmento de calibração de instrumentos de medição e analisadores eletromédicos em âmbito nacional.</p>
         </div>
   
       </section>
@@ -88,7 +94,7 @@
           <p>Nós somos comprometidos com a qualidade, inovação e excelência. Nossa Certificação ISO 9001 confirma nosso esforço constante para superar as expectativas e alcançar resultados excepcionais.</p>
         </div>
         <img class="certificacoes_img" src="./assets/Ativo 1.png" alt="">
-  
+
       </section>
       <section class="equipe">
   
