--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -29,7 +29,7 @@
             <li><a href="orcamento.html">Orçamentos</a></li>
             <li><a href="services.html">Serviços</a></li>
             <li><a href="about.html">Quem somos</a></li>
-            <li><a href="contate.html">Contatos</a></li>
+            <!-- <li><a href="contate.html">Contatos</a></li> -->
           </ul>
         </nav>
       </section>
