--- a/Codigo/about.html
+++ b/Codigo/about.html
@@ -24,6 +24,14 @@
         <img src="./assets/Logo-1-e1675283606825-300x112.png" style="height: 90px; width: 270px;" alt=""
           class="logo-principal">
       </section>
+      <div class="mobile-menu">
+        <div class="botao-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <i class="fa-solid fa-x" id="close"></i>
+      </div>
       <section class="nav-bar">
         <nav class="menu">
           <ul class="menu-links">
@@ -31,17 +39,9 @@
             <li><a href="orcamento.html">Orçamentos</a></li>
             <li><a href="services.html">Serviços</a></li>
             <li><a href="about.html">Quem somos</a></li>
-            <!-- <li><a href="contate.html">Contatos</a></li> -->
           </ul>
         </nav>
       </section>
-      <!-- <section class="links">
-        <a href="#" class="usuario">
-          <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
-          <span class="cliente">Área do Cliente</span>
-        </a>
-        
-      </section> -->
     </div>
   </header>
 
@@ -70,10 +70,12 @@
       </section>
       <section class="valores">
         <div class="valores_parte1">
+          <img src="./assets/alvo.png" class="alvo"  alt="">
           <span class="missao">Missão</span>
           <p>Prestar serviços de calibração em instrumentos de medição e analisadores eletromédicos.</p>
         </div>
         <div class="valores_parte2">
+          <img src="./assets/diamond.png" alt="">
           <span class="valores_empresa">Valores</span>
           <ul>
             <li>Qualidade</li>
@@ -85,6 +87,7 @@
           </ul>
         </div>
         <div class="valores_parte3">
+          <img src="./assets/binoculos.png" alt="">
           <span class="visao">Visão</span>
           <p>Reconhecimento no segmento de calibração de instrumentos de medição e analisadores eletromédicos em âmbito
             nacional.</p>
@@ -212,6 +215,7 @@
     </div>
   </footer>
 
+  <button onclick="RolaProTopo()" id="top"><i class="fa-solid fa-arrow-up"></i></button>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
