--- a/Codigo/politices.html
+++ b/Codigo/politices.html
@@ -22,6 +22,14 @@
       <section class="logo-cabecalho">
         <img src="./assets/Logo-1-e1675283606825-300x112.png" style="height: 90px; width: 270px;" alt="" class="logo-principal">
       </section>
+      <div class="mobile-menu">
+        <div class="botao-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <i class="fa-solid fa-x" id="close"></i>
+      </div>
       <section class="nav-bar">
         <nav class="menu">
           <ul class="menu-links">
@@ -33,13 +41,6 @@
           </ul>
         </nav>
       </section>
-      <!-- <section class="links">
-        <a href="#" class="usuario">
-          <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
-          <span class="cliente">Área do Cliente</span>
-        </a>
-        
-      </section> -->
     </div>
   </header>
 
