--- a/Codigo/services.html
+++ b/Codigo/services.html
@@ -24,6 +24,14 @@
       <section class="logo-cabecalho">
         <img src="./assets/Logo-1-e1675283606825-300x112.png" style="height: 90px; width: 270px;" alt="" class="logo-principal">
       </section>
+      <div class="mobile-menu">
+        <div class="botao-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <i class="fa-solid fa-x" id="close"></i>
+      </div>
       <section class="nav-bar">
         <nav class="menu">
           <ul class="menu-links">
@@ -31,17 +39,9 @@
             <li><a href="orcamento.html">Orçamentos</a></li>
             <li><a href="services.html">Serviços</a></li>
             <li><a href="about.html">Quem somos</a></li>
-            <!-- <li><a href="contate.html">Contatos</a></li> -->
           </ul>
         </nav>
       </section>
-      <!-- <section class="links">
-        <a href="#" class="usuario">
-          <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
-          <span class="cliente">Área do Cliente</span>
-        </a>
-        
-      </section> -->
     </div>
   </header>
 
@@ -50,11 +50,9 @@
       <span class="servicos_titulo">Nossos Serviços</span>
       <section class="servicos_calibracao">
         <div id="imagem-servico">
-          <img src="./assets/Calibracao.jpg" alt="" class="calibracao_img imagens_tipo">
-          <span class="campos-laterais">Calibração</span>
+          <img src="./assets/CalibracaoMOD.png" alt="" class="calibracao_img imagens_tipo">
         </div>  
         <div class="servicos_calibracao_texto">
-          <!-- <span class="calibracao titulo">Calibração</span> -->
           <p class="calibracao-texto">
             Há duas décadas, a Surgical Tecnologia se destaca no mercado, realizando a calibração de equipamentos médico-hospitalares. A nossa abordagem se pauta na confiabilidade e rastreabilidade da calibração, seguindo rigorosamente as normas de especificação, como a NBR ISO 9001 e seus requisitos metrológicos. Nossos serviços abrangem as renomadas instituições médicas de Belo Horizonte, assim como regiões interioranas de Minas Gerais, e se estendem por todo o território nacional. Consolidamo-nos como referência na calibração de analisadores em todo o estado de Minas Gerais.
           </p>
@@ -62,28 +60,22 @@
             Confira abaixo alguns dos equipamentos que realizamos calibração:
           </p>
         </div>
-        <div class="calibracao_tipos">
-          <div class="card">
-            <img src="./assets/Equipamento/352193431_2124936457704815_2990026440123766643_n.jpg" alt="">
-          </div>
-          <div class="card">
-            <img src="./assets/Equipamento/352588840_253978083946016_4672451099422925413_n.jpg" alt="">
-          </div>
-          <div class="card">
-            <img src="./assets/Equipamento/355159850_1602726046883825_5761240590046204130_n.jpg" alt="">
-          </div>
-          <div class="card">
-            <img src="./assets/Equipamento/355271475_628114479250388_4399841028099783570_n.jpg" alt="">
-          </div>
-          <div class="card">
-            <img src="./assets/Equipamento/355431541_645085814158664_3035943876772179831_n.jpg" alt="">
-          </div>
+        <div class="lista">
+          <ul class="lista_equip">
+            <li class="item_cal">Artrobomba</li>
+            <li class="item_cal">Bisturi</li>
+            <li class="item_cal"></li>
+            <li class="item_cal"></li>
+            <li class="item_cal"></li>
+            <li class="item_cal"></li>
+            <li class="item_cal"></li>
+            <li class="item_cal"></li>
+          </ul>
         </div>
       </section>
       <section class="servicos_preventiva">
         <div class="servicos_preventiva_imagem">
-          <img src="" alt="" class="preventiva_img imagens_tipo">
-          <span class="campos-laterais">Manutenção Preventiva</span>
+          <img src="./assets/Ativo 1.png" alt="" class="preventiva_img imagens_tipo">
         </div>
         <div class="servicos_teste_texto">
           <!-- <span class="preventiva titulo">Manutenção Preventiva</span> -->
@@ -92,18 +84,15 @@
       </section>
       <section class="servicos_teste">
         <div class="servicos_teste_imagem">
-          <img src="./assets/Teste de Seguranca_mod.jpg" alt="" class="teste_img imagens_tipo">
-          <span class="campos-laterais">Teste de Segurança Elétrica</span>
+          <img src="./assets/Teste de Seguranca_mod.png" alt="" class="teste_img imagens_tipo">
         </div>
         <div class="servicos_teste_texto">
-          <!-- <span class="teste titulo">Teste de Seguranca Elétrica</span> -->
           <p>Realizar testes de segurança elétrica em equipamentos médicos é essencial para garantir a integridade e a segurança dos pacientes, dos profissionais de saúde e do ambiente hospitalar como um todo. Esses testes asseguram que o equipamento esteja funcionando dentro dos parâmetros elétricos seguros, prevenindo riscos de choques elétricos, curtos-circuitos ou outros problemas que possam comprometer a operação adequada do equipamento e colocar em perigo a saúde e o bem-estar dos pacientes. Além disso, a realização regular desses testes contribui para cumprir regulamentações e normas de segurança estabelecidas pelas autoridades de saúde, garantindo a conformidade do equipamento com padrões de qualidade e segurança exigidos pela indústria médica.</p>
         </div>
       </section>
       <section class="servicos_corretiva">
         <div class="servicos_corretiva_imagem">
-          <img src="./assets/Corretiva.jpg" alt="" class="corretiva_img imagens_tipo">
-          <span class="campos-laterais">Manutenção Preventiva</span>
+          <img src="./assets/Corretiva.png" alt="" class="corretiva_img imagens_tipo">
         </div>
         <div class="servicos_corretiva_texto">
           <!-- <span class="corretiva titulo">Manutenção Corretiva</span> -->
@@ -122,10 +111,9 @@
           </p>
         </div>
       </section>
-      <button onclick="RolaProTopo()" id="top"><i class="fa-solid fa-arrow-up"></i></button>
     </section>
   </main>
-
+  
   <footer>
     <div class="conteudo">
       <div class="logo-footer">
@@ -141,7 +129,6 @@
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
-        <!-- <span class="telefone-fixo texto">Atendimento: (31)3141-7199 <br>(31)3464-7199 </span> -->
       </div>
       <div class="fale-conosco">
         <span class="fale subtitulo">Fale conosco</span>
@@ -160,9 +147,10 @@
       <span class="copyright_text texto">Copyright © 2023 Surgical Tecnologia </span>
     </div>
   </footer>
-
+  
+  <button onclick="RolaProTopo()" id="top"><i class="fa-solid fa-arrow-up"></i></button>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script>
   <script src="app.js"></script>
 </body>
 
