--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -22,6 +22,14 @@
       <section class="logo-cabecalho">
         <img src="./assets/Logo-1-e1675283606825-300x112.png" style="height: 90px; width: 270px;" alt="" class="logo-principal">
       </section>
+      <div class="mobile-menu">
+        <div class="botao-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <i class="fa-solid fa-x" id="close"></i>
+      </div>
       <section class="nav-bar">
         <nav class="menu">
           <ul class="menu-links">
@@ -33,13 +41,6 @@
           </ul>
         </nav>
       </section>
-      <!-- <section class="links">
-        <a href="#" class="usuario">
-          <img src="./assets/usuario-de-perfil.png" style="width: 50px;height: 50px;" alt="">
-          <span class="cliente">Área do Cliente</span>
-        </a>
-        
-      </section> -->
     </div>
   </header>
 
@@ -52,7 +53,7 @@
               <img src="./assets/1-1.png" class="d-block w-100" alt="..." >
             </div>
             <div class="carousel-item">
-              <a href="Orcamentos.html"><img src="./assets/2-1.png" class="d-block w-100" alt="..." ></a>
+              <a href="orcamento.html"><img src="./assets/2-1.png" class="d-block w-100" alt="..." ></a>
             </div>
             <div class="carousel-item">
               <img src="./assets/3.png" class="d-block w-100" alt="..." >
@@ -75,10 +76,10 @@
         </div>
       </section>
       <section id="video">
-        <iframe src="https://drive.google.com/file/d/1xF9s7Oii4HFk8Vn7eCdCQrm7zRoN4TG_/preview" width="480" height="280" allow="autoplay" allowfullscreen frameborder="0"></iframe>
+        <iframe src="https://drive.google.com/file/d/1xF9s7Oii4HFk8Vn7eCdCQrm7zRoN4TG_/preview" width="500" height="300" allow="autoplay" allowfullscreen frameborder="0"></iframe>
         <p class="video__texto"> Conheça um pouco sobre nós!!!</p>
       </section>
-      <section class="servicos">
+      <section class="servicos-main">
         <h2 class="servicos_texto"> Serviços </h2>
         <div class="servicos_items">
           <figure>
@@ -95,34 +96,22 @@
           </figure>
         </div>
         <div id="botao_servicos">
-          <a href="services.html" class="servicos_botao"><span>Conheça todos nossos serviços</span></a>
+          <a href="services.html" class="servicos_botao">Conheça todos nossos serviços</a>
         </div>  
       </section>
       <div class="conteudo_contato">
         <section class="conteudo_contato_links">
           <h4 class="conteudo_contato_titulo">Entre em contato conosco por Whatsapp</h4>
           <div class="whatsapps">
-            <a href=""><i class="fa-brands fa-whatsapp"></i><span>Comercial 1</span></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i><span>Comercial 2</span></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i><span>Expedição</span></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i><span>Planejamento</span></a>
+            <a href="https://wa.me//550319"><i class="fa-brands fa-whatsapp"></i>Comercial 1</a>
+            <a href="https://wa.me//55031995607199"><i class="fa-brands fa-whatsapp"></i>Comercial 2</a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i>Expedição</a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i>Planejamento</a>
           </div>
           <h4 class="conteudo_contato_titulo"> Caso Prefira, entre em contato por telefone </h4>
           <div class="telefones">
-            <a href=""><i class="fa-solid fa-phone"></i>(31)3141-7199</a>
-            <a href=""><i class="fa-solid fa-phone"></i>(31)3464-7199</a>
-          </div>
-        </section>
-        <section class="envio_mensagem">
-          <h4 class="conteudo_contato_titulo">Envie sua mensagem</h4>
-          <div class="envio_mensagem_campos">
-            <input type="text" name="nome" placeholder="Digite seu nome">
-            <input type="text" name="email" placeholder="Digite seu email">
-            <textarea name="mensagem" class="envio_campos_mensagem" cols="30" rows="10"
-              placeholder="Digite sua mensagem"></textarea>
-            <div>
-              <button href="" class="botao_envio"><span>Enviar Mensagem</span></button>
-            </div>
+            <a href="tel:+553131417199"><i class="fa-solid fa-phone"></i>(31)3141-7199</a>
+            <a href="tel:++3134647199"><i class="fa-solid fa-phone"></i>(31)3464-7199</a>
           </div>
         </section>
       </div>
@@ -163,7 +152,7 @@
       <span class="copyright_text texto">Copyright © 2023 Surgical Tecnologia </span>
     </div>
   </footer>
-
+  <button onclick="RolaProTopo()" id="top"><i class="fa-solid fa-arrow-up"></i></button>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   <script src="app.js"></script>
 </body>
