Correcao de erros no javascript

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -16,7 +16,7 @@
   <title>Surgical Tec – Calibração em equipamentos eletromédicos</title>
 </head>
 
-<body>
+<body onload="SelecionaBarra()">
   <header>
     <div class="barra-de-navegacao">
       <section class="logo-cabecalho">
