--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -82,20 +82,20 @@
       <section class="servicos-main">
         <h2 class="servicos_texto"> Serviços </h2>
         <div class="servicos_items">
-          <figure>
+          <figure class="card1 scrollreveal">
             <img src="./assets/Calibracao.jpg" alt="Calibracao">
             <figcaption>Calibração</figcaption>
           </figure>
-          <figure>
+          <figure class="card2 scrollreveal">
             <img src="./assets/Corretiva.jpg" alt="Corretiva">
             <figcaption>Manutenção<br>Corretiva</figcaption>
           </figure>
-          <figure>
+          <figure class="card3 scrollreveal">
             <img src="./assets/Teste de Seguranca_mod.jpg" alt="Teste">
             <figcaption>Teste de<br>Segurança<br> Eletrica</figcaption>
           </figure>
         </div>
-        <div id="botao_servicos">
+        <div id="botao_servicos" class="scrollreveal">
           <a href="services.html" class="servicos_botao">Conheça todos nossos serviços</a>
         </div>
       </section>
@@ -103,10 +103,10 @@
         <section class="conteudo_contato_links">
           <h4 class="conteudo_contato_titulo">Sinta-se à vontade para nos contatar através do WhatsApp.</h4>
           <div class="whatsapps">
-            <a href="https://wa.me//55031984066985"><i class="fa-brands fa-whatsapp"></i>Comercial 1</a>
-            <a href="https://wa.me//55031995607199"><i class="fa-brands fa-whatsapp"></i>Comercial 2</a>
-            <a href="https://wa.me//55031999733630" class="whatsapps-expedicao"><i class="fa-brands fa-whatsapp"></i>Expedição</a>
-            <a href="https://wa.me//55031999326375" class="whatsapps-planejamento"><i class="fa-brands fa-whatsapp"></i>Planejamento</a>
+            <a href="https://wa.me//55031984066985" class="whatsapps-contato1 crollreveal"><i class="fa-brands fa-whatsapp"></i>Comercial 1</a>
+            <a href="https://wa.me//55031995607199" class="whatsapps-contato2 scrollreveal"><i class="fa-brands fa-whatsapp"></i>Comercial 2</a>
+            <a href="https://wa.me//55031999733630" class="whatsapps-expedicao scrollreveal"><i class="fa-brands fa-whatsapp"></i>Expedição</a>
+            <a href="https://wa.me//55031999326375" class="whatsapps-planejamento scrollreveal"><i class="fa-brands fa-whatsapp"></i>Planejamento</a>
           </div>
         </section>
       </div>
@@ -159,6 +159,7 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous">
   </script>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script src="geral.js"></script>  
 </body>
 
