--- a/Codigo/sac.html
+++ b/Codigo/sac.html
@@ -11,6 +11,7 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="icon" href="./assets/cropped-icone_surgical_tecnologia2-180x180.png">
   <link rel="stylesheet" href="./styles/styles.css">
+  <script src="https://unpkg.com/scrollreveal" defer></script>
   <title>Surgical Tec – Calibração em equipamentos eletromédicos</title>
 </head>
 
