--- a/Codigo/about.html
+++ b/Codigo/about.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="./assets/cropped-icone_surgical_tecnologia2-180x180.png">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/style_somos.css">
+  <script src="https://unpkg.com/scrollreveal" defer></script>
   <title>Surgical Tec – Calibração em equipamentos eletromédicos</title>
 </head>
 
