--- a/Codigo/politices.html
+++ b/Codigo/politices.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="./assets/cropped-icone_surgical_tecnologia2-180x180.png">
   <script src="https://player.vimeo.com/api/player.js"></script>
   <link rel="stylesheet" href="./styles/styles.css">
+  <script src="https://unpkg.com/scrollreveal" defer></script>
   <title>Surgical Tec – Calibração em equipamentos eletromédicos</title>
 </head>
 
