--- a/Codigo/services.html
+++ b/Codigo/services.html
@@ -12,6 +12,7 @@
   <script src="https://kit.fontawesome.com/c4f0f1685c.js" crossorigin="anonymous"></script>
   <link rel="icon" href="./assets/cropped-icone_surgical_tecnologia2-180x180.png">
   <link rel="stylesheet" href="./styles/styles.css">
+  <script src="https://unpkg.com/scrollreveal" defer></script>
   <title>Surgical Tec – Calibração em equipamentos eletromédicos</title>
 </head>
 
