--- a/Codigo/services.html
+++ b/Codigo/services.html
@@ -48,8 +48,13 @@
     <section class="servicos">
       <span class="servicos_titulo titulo">Nossos Serviços</span>
       <section class="servicos_calibracao">
-        <div id="imagem-servico">
-          <img src="./assets/CalibracaoMOD.png" alt="" class="calibracao_img imagens_tipo">
+        <div id="imagem-servico" class="container">
+          <img src="./assets/Calibracao.jpg" alt="" class="calibracao_img imagens_tipo background-image">
+          <div class="overlay">
+            <p class="texto_container">
+              Calibração
+            </p>
+          </div>
         </div>  
         <div class="servicos_calibracao_texto texto">
           <p class="calibracao-texto">
@@ -58,24 +63,37 @@
         </div>
       </section>
       <section class="servicos_preventiva">
-        <div class="servicos_preventiva_imagem">
+        <div class="servicos_preventiva_imagem container">
           <img src="./assets/Manutencao_Preventiva.png" alt="" class="preventiva_img imagens_tipo">
+          <div class="overlay">
+            <p class="texto_container">Manutenção Preventiva</p>
+          </div>
         </div>
         <div class="servicos_preventiva_texto texto">
           <p>A nossa abordagem de manutenção preventiva se fundamenta na investigação sistemática dos equipamentos médico-hospitalares, visando a minimização ou prevenção de possíveis falhas em seu desempenho. Essa avaliação é conduzida de maneira periódica, semestral ou anual, adaptando-se à complexidade de cada equipamento. Esse enfoque contribui significativamente para a redução das necessidades de intervenções corretivas, que não apenas acarretam despesas adicionais, mas também resultam em prejuízos operacionais.</p>
         </div>
       </section>
       <section class="servicos_teste">
-        <div class="servicos_teste_imagem">
-          <img src="./assets/Teste de Seguranca_mod.png" alt="" class="teste_img imagens_tipo">
+        <div class="servicos_teste_imagem container">
+          <img src="./assets/Teste de Seguranca.jpg" alt="" class="teste_img imagens_tipo">
+          <div class="overlay">
+            <p class="texto_container">
+              Teste de Segurança Elética
+            </p>
+          </div>
         </div>
         <div class="servicos_teste_texto">
           <p>Realizar testes de segurança elétrica em equipamentos médicos é essencial para garantir a integridade e a segurança dos pacientes, dos profissionais de saúde e do ambiente hospitalar como um todo. Esses testes asseguram que o equipamento esteja funcionando dentro dos parâmetros elétricos seguros, prevenindo riscos de choques elétricos, curtos-circuitos ou outros problemas que possam comprometer a operação adequada do equipamento e colocar em perigo a saúde e o bem-estar dos pacientes. Além disso, a realização regular desses testes contribui para cumprir regulamentações e normas de segurança estabelecidas pelas autoridades de saúde, garantindo a conformidade do equipamento com padrões de qualidade e segurança exigidos pela indústria médica.</p>
         </div>
       </section>
       <section class="servicos_corretiva">
-        <div class="servicos_corretiva_imagem">
-          <img src="./assets/Corretiva.png" alt="" class="corretiva_img imagens_tipo">
+        <div class="servicos_corretiva_imagem container">
+          <img src="./assets/Corretiva.jpg" alt="" class="corretiva_img imagens_tipo">
+          <div class="overlay">
+            <p class="texto_container">
+              Manutenção Corretiva
+            </p>
+          </div>
         </div>
         <div class="servicos_corretiva_texto">
           <p>Com foco em corrigir eventuais problemas de falhas dos equipamentos em decorrência de acidentes, queda, quebras, erros de manuseio entre outros fatores que podem prejudicar o desempenho do equipamento.
